Adds UpdateMyProfile function as well as tests for it
