# app/controllers.go
@@ -5,7 +5,7 @@
 // Command:
 // $ goagen
 // --design=github.com/JormungandrK/microservice-user-profile/design
-// --out=$(GOPATH)/src/github.com/JormungandrK/microservice-user-profile
+// --out=$(GOPATH)src/github.com/JormungandrK/microservice-user-profile
 // --version=v1.2.0-dirty
 
 package app
@@ -60,6 +60,7 @@ type UserProfileController interface {
 	goa.Muxer
 	GetMyProfile(*GetMyProfileUserProfileContext) error
 	GetUserProfile(*GetUserProfileUserProfileContext) error
+	UpdateMyProfile(*UpdateMyProfileUserProfileContext) error
 	UpdateUserProfile(*UpdateUserProfileUserProfileContext) error
 }
 
@@ -104,6 +105,27 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 			return err
 		}
 		// Build the context
+		rctx, err := NewUpdateMyProfileUserProfileContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		// Build the payload
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*UserProfilePayload)
+		} else {
+			return goa.MissingPayloadError()
+		}
+		return ctrl.UpdateMyProfile(rctx)
+	}
+	service.Mux.Handle("PUT", "/profiles/me", ctrl.MuxHandler("UpdateMyProfile", h, unmarshalUpdateMyProfileUserProfilePayload))
+	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateMyProfile", "route", "PUT /profiles/me")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
 		rctx, err := NewUpdateUserProfileUserProfileContext(ctx, req, service)
 		if err != nil {
 			return err
@@ -118,6 +140,21 @@ func MountUserProfileController(service *goa.Service, ctrl UserProfileController
 	}
 	service.Mux.Handle("PUT", "/users/:userId/profile", ctrl.MuxHandler("UpdateUserProfile", h, unmarshalUpdateUserProfileUserProfilePayload))
 	service.LogInfo("mount", "ctrl", "UserProfile", "action", "UpdateUserProfile", "route", "PUT /users/:userId/profile")
+}
+
+// unmarshalUpdateMyProfileUserProfilePayload unmarshals the request body into the context request data Payload field.
+func unmarshalUpdateMyProfileUserProfilePayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &userProfilePayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	if err := payload.Validate(); err != nil {
+		// Initialize payload with private data structure so it can be logged
+		goa.ContextRequest(ctx).Payload = payload
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
 }
 
 // unmarshalUpdateUserProfileUserProfilePayload unmarshals the request body into the context request data Payload field.
