# swagger/swagger.yaml
@@ -129,6 +129,43 @@ paths:
       summary: GetMyProfile userProfile
       tags:
       - userProfile
+    put:
+      description: Update my profile
+      operationId: userProfile#UpdateMyProfile
+      parameters:
+      - description: UserProfile data
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/UserProfilePayload'
+      produces:
+      - application/vnd.goa.error
+      - application/vnd.goa.error
+      - application/vnd.goa.error
+      - application/jormungandr.user-profile+json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/userProfile'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/error'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/error'
+      schemes:
+      - http
+      summary: UpdateMyProfile userProfile
+      tags:
+      - userProfile
   /swagger-ui/{filepath}:
     get:
       operationId: swagger#/swagger-ui/*filepath
